--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Maison à Espenel</title>
+  <title>Maison à Menglon</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -14,10 +14,10 @@
         <img src="./logo.png" alt="Logo">
       </div>
       <div class="text-background">
-        <h1>Maison de plain-pied avec grand sous-sol</h1>
-        <p>ESPENEL</p>
-        <p>Cyrille BOUVET-06 22 85 16 39 / Yaël BORJA-07 51 62 09 13</p>
-        <p class="prix">280 000 €</p>
+        <h1>Maison de Maitre avec source et vue nature </h1>
+        <p>MENGLON - En Exclusivité</p>
+        <p>Cyrille BOUVET - 06 22 85 16 39 / Yaël BORJA - 07 51 62 09 13</p>
+        <p class="prix">320 000 €</p>
       </div>
     </header>
     <nav class="menu">
@@ -36,11 +36,9 @@
       <section id="a-propos">
         <h2>A propos</h2>
         <p>
-Dans la vallée de la Drôme, entre Saillans et Die, sur la commune paisible d’Espenel, découvrez cette charmante maison construite dans les années 2000. 
-Bénéficiant d’un cadre tranquille et d’une vue imprenable sur les reliefs environnants, cette propriété a été soigneusement entretenue par son unique propriétaire.</p>
-<p>Implantée sur une parcelle arborée de 1 500 m², la maison vous surprendra dès l’entrée par ses hauts plafonds dans la pièce de vie, baignée de lumière tout au long de la journée grâce à ses nombreuses ouvertures. De plain-pied, elle offre deux chambres et une grande salle de bains, garantissant un confort de vie optimal au quotidien.</p> 
-<p>Vous apprécierez également le sous-sol complet, idéal pour le stockage, le rangement, ainsi que le stationnement de véhicules. La propriété bénéficie en prime d’un terrain jouxtant le ruisseau du Morina, un véritable atout pour vous rafraîchir lors des périodes les plus chaudes de l’année.</p>
-<p>Cette maison vous séduira par son charme naturel, ses possibilités de rangement et ses différents espaces extérieurs, parfaits pour profiter pleinement de la nature environnante.</p>
+Rare : cette ancienne maison de maître datant du XIXe siècle servait d’habitation au prêtre du village mais était également un lieu d’accueil et d’échange. Construite en pierres locales, elle lui confère une grande solidité et une bonne inertie thermique. Son architecture est élégante et symétrique. Une particularité rend cette demeure unique : une source traverse l’une des caves en longeant le mur extérieur. En construisant volontairement la maison près de l’eau, les bâtisseurs ont voulu symboliser l’abondance et la fertilité. Idéalement disposée, son orientation vers le Sud lui apporte lumière et chaleur. Ouverte sur la nature, la vue depuis la propriété est magnifique : avec une biodiversité riche et variée, vous aurez l’occasion d’observer de nombreux animaux sauvages. La maison offre un cadre de vie mêlant calme et douceur. Situé à proximité de Châtillon-en-Diois, Menglon s'étend entre vignes et noyers, abritant de charmants hameaux et de belles fermes, ainsi que des châteaux dotés de tourelles. Vous y trouverez une école primaire, des transports scolaires, ainsi qu’une vie associative dynamique.</p> 
+<p>Répartition des pièces : rez-de-chaussée avec un hall d’entrée et un couloir qui distribue une cuisine, un salon, un wc séparé et une salle de douche. À l’étage vous trouverez 4 chambres, une pièce de douche avec wc. En rez-de-jardin vous découvrirez un atelier, une chaufferie et 2 caves.</p>
+<p>À noter que pour améliorer son confort énergétique, cette demeure pourrait bénéficier de l’aide financière ma prime rénov.</p>
 </p>
       </section>
       <section id="photos">
@@ -60,13 +58,14 @@ Bénéficiant d’un cadre tranquille et d’une vue imprenable sur les reliefs 
           <img src="photos/12.jpeg" alt="Photo 3"  />
           <img src="photos/13.jpeg" alt="Photo 3" />
           <img src="photos/14.jpeg" alt="Photo 3"  />
-          <img src="photos/16.jpeg" alt="Photo 3" />
+          <img src="photos/15.jpeg" alt="Photo 1" />
+          <img src="photos/16.jpeg" alt="Photo 2"/>
+          <img src="photos/17.jpeg" alt="Photo 3" />
           <img src="photos/18.jpeg" alt="Photo 3"  />
-          <img src="photos/19.jpeg" alt="Photo 3" />
-          <img src="photos/20.jpeg" alt="Photo 3"  />
-          <img src="photos/21.jpeg" alt="Photo 3" />
-          <img src="photos/22.jpeg" alt="Photo 3"  />
-          <img src="photos/23.jpeg" alt="Photo 3"  />
+          <img src="photos/19.jpeg" alt="Photo 3"  />
+          <img src="photos/20.jpeg" alt="Photo 3" />
+          <img src="photos/21.jpeg" alt="Photo 3"  />
+          <img src="photos/22.jpeg" alt="Photo 1" />
           <!-- Ajoutez autant de photos que nécessaire -->
           <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
           <a class="next" onclick="changeSlide(1)">&#10095;</a>
@@ -74,75 +73,69 @@ Bénéficiant d’un cadre tranquille et d’une vue imprenable sur les reliefs 
       </section>
       <section id="video-interieur" class="video-section">
         <h2>Vidéo Intérieur</h2>
-        <iframe src="https://www.youtube.com/embed/HuxSydGOxbg"></iframe>
+        <iframe src="https://www.youtube.com/embed/MMMqIAcd1NM"></iframe>
       </section>
-       <section id="video-exterieur" class="video-section">
+      <section id="video-exterieur" class="video-section">
         <h2>Vidéo Extérieur</h2>
-         <iframe src="https://www.youtube.com/embed/BeX_fxXNnvw"></iframe>
-        </video>
+        <iframe src="https://www.youtube.com/embed/D-UlC3WQeVg"></iframe>
       </section>
       <section id="geolocalisation">  
         <h2>Géolocalisation</h2>
-        <iframe src="https://www.google.com/maps/d/embed?hl=fr&mid=1SjCFll_f5m3jGeTJ3t07iYqidFKYvGY&ll=44.6839820570202%2C5.228676699654149&z=19"></iframe>
+        <iframe src="https://www.google.com/maps/d/embed?mid=1cNT_TrRhWdtL5XjkSF5UiC-WAu4iZc0&usp=sharing"></iframe>
       </section>
       <section id="cadastre">
         <h2>Cadastre</h2>
 <div style="display: flex; justify-content: center; align-items: center;">
-  <img src="documents/cadastre.png"alt="Cadastre" style="max-width: 60%; height: auto;" />
+  <img src="documents/WhatsApp Image 2025-06-20 at 13.58.10.jpeg  "alt="Cadastre" style="max-width: 60%; height: auto;" />
 </div>
       </section>
       <section id="Vue aérienne">
         <h2>Vue aérienne</h2>
 <div style="display: flex; justify-content: center; align-items: center;">
-  <img src="documents/vue-aerienne espenel.jpg.png"alt="Cadastre" style="max-width: 60%; height: auto;" />
+  <img src="documents/vue-aerienne.jpg"alt="Cadastre" style="max-width: 60%; height: auto;" />
 </div>
       </section>
     <section id="details-techniques">
     <h2>Détails Techniques</h2>
     <ul>
-        <li><strong>Année de construction :</strong> 2000</li>
-        <li><strong>Année d’achat :</strong> 2000</li>
-        <li><strong>Matériaux de construction :</strong> Béton banché sur la partie sous-sol + parpaing avec brique</li>
-        <li><strong>Isolation :</strong> laine de verre 100mm/ isolation polystyrène par le sous-sol au profit du niveau supérieur</li>
+        <li><strong>Année de construction :</strong> Plus de 100 ans</li>
+        <li><strong>Année d’achat :</strong> 2012</li>
+        <li><strong>Matériaux de construction :</strong> Pierre</li>
+        <li><strong>Isolation :</strong>Murs > pas d'isolation - Plafond > Partiellement isolé </li>
         <li><strong>Toiture:</strong> Charpente traditionnelle</li>
-        <li><strong>Assainissement :</strong> Individuel - diagnostic en cours</li>
-        <li><strong>Huisseries :</strong> Fenêtres : PVC - Baie : PVC</li>
-        <li><strong>Volets :</strong> PVC - volet roulant éléectrique pour la baie vitrée</li>
-        <li><strong>Superficie habitable :</strong> 77 m2</li>
-        <li><strong>Surface extérieure :</strong> 2 197 m² (1 508 + 304 + 385)</li>
-        <li><strong>Nombre de chambres :</strong> 2</li>
-        <li><strong>Garage/ Sous-sol :</strong> 77 m²</li>
-        <li><strong>Mode de chauffage :</strong> Chaudière gaz très haute performance énergétique (changée en 2020) chauffage par le sol (eau chaude) Poêle à bois installé fin 2023</li>
-        <li><strong>Coût annuel du chauffage :</strong> GAZ : environ 50€/mois (moyenne depuis l'installation) - BOIS : 4 à 5 stères par an</li>
-        <li><strong>Coût annuel de l’électricité :</strong> 900 € pour 2024</li>
-        <li><strong>Taxe foncière :</strong> 531 €</li>
-        <li><strong>Autres informations :</strong> Portail de garage éléctrique / possibilité d'agrandissement de la maison</li>
+        <li><strong>Assainissement :</strong> Tout à l'égout</li>
+        <li><strong>Huisseries :</strong> Bois double vitrages </li>
+        <li><strong>Superficie habitable :</strong> 125 m2</li>
+        <li><strong>Surface cadastrale :</strong> 545 m2</li>
+        <li><strong>Nombre de chambres :</strong> 4</li>
+        <li><strong>Annexes:</strong> Atelier/ caves</li>
+        <li><strong>Mode de chauffage :</strong> Chaudière fioul / Cheminée insert</li>
+        <li><strong>Coût annuel du chauffage :</strong> Non représentatif (Maison secondaire)</li>
+        <li><strong>Coût annuel de l’électricité :</strong> Non représentatif (Maison secondaire)</li>
+        <li><strong>Taxe foncière :</strong> 430 €</li>
+        <li><strong>Autres informations :</strong> Derniers travaux réalisés 2018 Débouchage/Curage canalisation eaux pluviales</li>
     </ul>
 </section>
    <section id="dpe">
     <h2>Diagnostic de Performance Énergétique</h2>
     <div style="display: flex; justify-content: center; align-items: center;">
-      <img src="documents/DPE.jpg" alt="DPE" style="max-width: 40%; height: auto;" />
+      <img src="documents/vignette DPE.png" alt="DPE" style="max-width: 40%; height: auto;" />
     </div>
 </section>
       <section id="elements-supplementaires">
         <h2>Documents</h2>
         <div class="documents">
-          <a href="documents/DDT.pdf">
+          <a href="documents/DDT_-_2023122010-HAMMER_HAMMER_Gudrun.pdf">
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-            Diagnostics
+            DPE
           </a>
-           <a href="documents/ERP.pdf">
-            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-            ERP
-          </a>
-          <a href="documents/PLAN MAISON_000006.pdf">
+           <a href="documents/croquis.jpg">
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
             Croquis
           </a>
-          <a href="">
+           <a href="documents/InformationsParcelles.pdf">
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-            Diagnostic assainissement individuel
+            Informations parcelles
           </a>
         </div>
       </section>  
