--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Maison à Menglon</title>
+  <title>Maison à Espenel</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -14,10 +14,10 @@
         <img src="./logo.png" alt="Logo">
       </div>
       <div class="text-background">
-        <h1>Maison de Maitre avec source et vue nature </h1>
-        <p>MENGLON - En Exclusivité</p>
+        <h1>Maison à fort potentiel avec vue imprenable sur les montagnes </h1>
+        <p>DIE</p>
         <p>Cyrille BOUVET - 06 22 85 16 39 / Yaël BORJA - 07 51 62 09 13</p>
-        <p class="prix">320 000 €</p>
+        <p class="prix">304 000 €</p>
       </div>
     </header>
     <nav class="menu">
@@ -36,9 +36,13 @@
       <section id="a-propos">
         <h2>A propos</h2>
         <p>
-Rare : cette ancienne maison de maître datant du XIXe siècle servait d’habitation au prêtre du village mais était également un lieu d’accueil et d’échange. Construite en pierres locales, elle lui confère une grande solidité et une bonne inertie thermique. Son architecture est élégante et symétrique. Une particularité rend cette demeure unique : une source traverse l’une des caves en longeant le mur extérieur. En construisant volontairement la maison près de l’eau, les bâtisseurs ont voulu symboliser l’abondance et la fertilité. Idéalement disposée, son orientation vers le Sud lui apporte lumière et chaleur. Ouverte sur la nature, la vue depuis la propriété est magnifique : avec une biodiversité riche et variée, vous aurez l’occasion d’observer de nombreux animaux sauvages. La maison offre un cadre de vie mêlant calme et douceur. Situé à proximité de Châtillon-en-Diois, Menglon s'étend entre vignes et noyers, abritant de charmants hameaux et de belles fermes, ainsi que des châteaux dotés de tourelles. Vous y trouverez une école primaire, des transports scolaires, ainsi qu’une vie associative dynamique.</p> 
-<p>Répartition des pièces : rez-de-chaussée avec un hall d’entrée et un couloir qui distribue une cuisine, un salon, un wc séparé et une salle de douche. À l’étage vous trouverez 4 chambres, une pièce de douche avec wc. En rez-de-jardin vous découvrirez un atelier, une chaufferie et 2 caves.</p>
-<p>À noter que pour améliorer son confort énergétique, cette demeure pourrait bénéficier de l’aide financière ma prime rénov.</p>
+Un emplacement rare à Die, à seulement quelques pas du centre-ville, offrant une vue panoramique à couper le souffle sur les montagnes environnantes.
+Nichée dans un environnement bucolique, cette maison donne la sensation d’être en pleine nature tout en bénéficiant de la proximité immédiate des commodités. Son orientation idéale inonde les pièces de lumière naturelle tout au long de la journée.</p> 
+<p>L’intérieur, à repenser entièrement, offre un beau potentiel de rénovation : imaginez une vaste pièce de vie de près de 80 m² de plain-pied, tout en conservant trois chambres confortables.</p>
+<p>En complément, un grand sous-sol d’environ 75 m² vous ouvre de nombreuses possibilités : espace de rangement, atelier, salle de loisirs… laissez libre cours à vos envies !
+<p>Enfin, un extérieur d’environ 900 m² s’étend tout autour de la maison, véritable écrin de verdure propice aux après-midis ensoleillés, au jardinage et aux doux instants en plein air.
+</p>
+</p>
 </p>
       </section>
       <section id="photos">
@@ -51,21 +55,6 @@ Rare : cette ancienne maison de maître datant du XIXe siècle servait d’habit
           <img src="photos/5.jpeg" alt="Photo 3"  />
           <img src="photos/6.jpeg" alt="Photo 3" />
           <img src="photos/7.jpeg" alt="Photo 3"  />
-          <img src="photos/8.jpeg" alt="Photo 1" />
-          <img src="photos/9.jpeg" alt="Photo 2"/>
-          <img src="photos/10.jpeg" alt="Photo 3" />
-          <img src="photos/11.jpeg" alt="Photo 3"  />
-          <img src="photos/12.jpeg" alt="Photo 3"  />
-          <img src="photos/13.jpeg" alt="Photo 3" />
-          <img src="photos/14.jpeg" alt="Photo 3"  />
-          <img src="photos/15.jpeg" alt="Photo 1" />
-          <img src="photos/16.jpeg" alt="Photo 2"/>
-          <img src="photos/17.jpeg" alt="Photo 3" />
-          <img src="photos/18.jpeg" alt="Photo 3"  />
-          <img src="photos/19.jpeg" alt="Photo 3"  />
-          <img src="photos/20.jpeg" alt="Photo 3" />
-          <img src="photos/21.jpeg" alt="Photo 3"  />
-          <img src="photos/22.jpeg" alt="Photo 1" />
           <!-- Ajoutez autant de photos que nécessaire -->
           <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
           <a class="next" onclick="changeSlide(1)">&#10095;</a>
@@ -73,69 +62,74 @@ Rare : cette ancienne maison de maître datant du XIXe siècle servait d’habit
       </section>
       <section id="video-interieur" class="video-section">
         <h2>Vidéo Intérieur</h2>
-        <iframe src="https://www.youtube.com/embed/MMMqIAcd1NM"></iframe>
+        <iframe src="https://www.youtube.com/embed/Y4OWu2-Oe0c"></iframe>
       </section>
       <section id="video-exterieur" class="video-section">
         <h2>Vidéo Extérieur</h2>
-        <iframe src="https://www.youtube.com/embed/D-UlC3WQeVg"></iframe>
+        <iframe src="https://www.youtube.com/embed/1x1pNOvK4s8"></iframe>
       </section>
       <section id="geolocalisation">  
         <h2>Géolocalisation</h2>
-        <iframe src="https://www.google.com/maps/d/embed?mid=1cNT_TrRhWdtL5XjkSF5UiC-WAu4iZc0&usp=sharing"></iframe>
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1Mou3ZQbNyg8nXSKMiYmVuFRDAnBISWQ&usp=sharing"></iframe>
       </section>
       <section id="cadastre">
         <h2>Cadastre</h2>
 <div style="display: flex; justify-content: center; align-items: center;">
-  <img src="documents/WhatsApp Image 2025-06-20 at 13.58.10.jpeg  "alt="Cadastre" style="max-width: 60%; height: auto;" />
+  <img src="documents/cadasrte.png"alt="Cadastre" style="max-width: 60%; height: auto;" />
 </div>
       </section>
       <section id="Vue aérienne">
         <h2>Vue aérienne</h2>
 <div style="display: flex; justify-content: center; align-items: center;">
-  <img src="documents/vue-aerienne.jpg"alt="Cadastre" style="max-width: 60%; height: auto;" />
+  <img src="documents/vue aérienne.png"alt="Cadastre" style="max-width: 60%; height: auto;" />
 </div>
       </section>
     <section id="details-techniques">
     <h2>Détails Techniques</h2>
     <ul>
-        <li><strong>Année de construction :</strong> Plus de 100 ans</li>
-        <li><strong>Année d’achat :</strong> 2012</li>
-        <li><strong>Matériaux de construction :</strong> Pierre</li>
-        <li><strong>Isolation :</strong>Murs > pas d'isolation - Plafond > Partiellement isolé </li>
-        <li><strong>Toiture:</strong> Charpente traditionnelle</li>
+        <li><strong>Année de construction :</strong> années 1960</li>
+        <li><strong>Année d’achat :</strong> 1960</li>
+        <li><strong>Matériaux de construction :</strong> Fondation béton banché / murs en parpaings</li>
+        <li><strong>Isolation :</strong>murs /aucune - Plafond / aucune</li>
+        <li><strong>Toiture:</strong> Charpente en fermettes et couvertures plaques fibro-ciment</li>
         <li><strong>Assainissement :</strong> Tout à l'égout</li>
-        <li><strong>Huisseries :</strong> Bois double vitrages </li>
-        <li><strong>Superficie habitable :</strong> 125 m2</li>
-        <li><strong>Surface cadastrale :</strong> 545 m2</li>
+        <li><strong>Huisseries :</strong> Bois simple vitrage / Baie aluminium sur la partie véranda</li>
+        <li><strong>Superficie habitable :</strong> 116 m2 + 12 m2 (véranda)</li>
+        <li><strong>Superficie sous-sol :</strong> Environ 75 m2</li>
+        <li><strong>Surface cadastrale :</strong> 875 m2 division parcellaire en cours </li>
         <li><strong>Nombre de chambres :</strong> 4</li>
-        <li><strong>Annexes:</strong> Atelier/ caves</li>
-        <li><strong>Mode de chauffage :</strong> Chaudière fioul / Cheminée insert</li>
-        <li><strong>Coût annuel du chauffage :</strong> Non représentatif (Maison secondaire)</li>
-        <li><strong>Coût annuel de l’électricité :</strong> Non représentatif (Maison secondaire)</li>
-        <li><strong>Taxe foncière :</strong> 430 €</li>
-        <li><strong>Autres informations :</strong> Derniers travaux réalisés 2018 Débouchage/Curage canalisation eaux pluviales</li>
+        <li><strong>Servitudes :</strong> Servitude souterraine (eau de pluie) profitant à la maison</li>  
+        <li><strong>Mode de chauffage :</strong> Chaudière fuel à condensation par radiateurs</li>
+        <li><strong>Taxe foncière :</strong> donnée indisponible dûe à la division parcellaire</li>
+        <li><strong>Autres informations :</strong> Rénovations importantes à envisager pour un confort de vie</li>
     </ul>
 </section>
    <section id="dpe">
     <h2>Diagnostic de Performance Énergétique</h2>
     <div style="display: flex; justify-content: center; align-items: center;">
-      <img src="documents/vignette DPE.png" alt="DPE" style="max-width: 40%; height: auto;" />
+      <img src="documents/DPE.png" alt="DPE" style="max-width: 40%; height: auto;" />
     </div>
 </section>
       <section id="elements-supplementaires">
         <h2>Documents</h2>
         <div class="documents">
-          <a href="documents/DDT_-_2023122010-HAMMER_HAMMER_Gudrun.pdf">
+          <a href="documents/9 diagnostics.pdf">
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
             DPE
           </a>
-           <a href="documents/croquis.jpg">
+          <a href="documents/11 audit.pdf">
+            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
+            AUDIT
+          </a>
+           <a href="documents/croquis.pdf">
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
             Croquis
           </a>
-           <a href="documents/InformationsParcelles.pdf">
+          <a href="documents/division parcellaire.pdf">
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-            Informations parcelles
+            Division Parcellaire
+          </a>
+          </a>
           </a>
         </div>
       </section>  
