--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Maison à Espenel</title>
+  <title>Local Professionnel</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -14,17 +14,16 @@
         <img src="./logo.png" alt="Logo">
       </div>
       <div class="text-background">
-        <h1>Maison à fort potentiel avec vue imprenable sur les montagnes </h1>
-        <p>DIE</p>
+        <h1>Bureaux à proximité de stationnement </h1>
+        <p>Livron sur Drôme</p>
         <p>Cyrille BOUVET - 06 22 85 16 39 / Yaël BORJA - 07 51 62 09 13</p>
-        <p class="prix">304 000 €</p>
+        <p class="prix">105 000 €</p>
       </div>
     </header>
     <nav class="menu">
       <a href="#a-propos">Description</a>
       <a href="#photos">Photos</a>
       <a href="#video-interieur">Vidéo intérieur</a>
-      <a href="#video-exterieur">Vidéo extérieur</a>
       <a href="#geolocalisation">Géolocalisation</a>
       <a href="#cadastre">Cadastre</a>
       <a href="#Vue aérienne">Vue aérienne</a>
@@ -36,11 +35,10 @@
       <section id="a-propos">
         <h2>A propos</h2>
         <p>
-Un emplacement rare à Die, à seulement quelques pas du centre-ville, offrant une vue panoramique à couper le souffle sur les montagnes environnantes.
-Nichée dans un environnement bucolique, cette maison donne la sensation d’être en pleine nature tout en bénéficiant de la proximité immédiate des commodités. Son orientation idéale inonde les pièces de lumière naturelle tout au long de la journée.</p> 
-<p>L’intérieur, à repenser entièrement, offre un beau potentiel de rénovation : imaginez une vaste pièce de vie de près de 80 m² de plain-pied, tout en conservant trois chambres confortables.</p>
-<p>En complément, un grand sous-sol d’environ 75 m² vous ouvre de nombreuses possibilités : espace de rangement, atelier, salle de loisirs… laissez libre cours à vos envies !
-<p>Enfin, un extérieur d’environ 900 m² s’étend tout autour de la maison, véritable écrin de verdure propice aux après-midis ensoleillés, au jardinage et aux doux instants en plein air.
+Découvrez ces bureaux idéalement situé à Livron-sur-Drôme, à deux pas du grand parking gratuit de la mairie.
+Ils bénéficient d’un double accès pratique, depuis la rue du Parc et l’avenue principale Joseph Combier.</p> 
+<p>Situé au sein d’une petite copropriété de 5 lots avec un espace vert accueillant, ce local offre un bel espace de travail lumineux d’environ 35 m² pouvant servir de coworking. Il dispose également de plusieurs pièces modulables, facilement aménageables selon la nature de votre activité.</p>
+<p>Un emplacement stratégique pour développer votre activité dans un environnement agréable et fonctionnel.
 </p>
 </p>
 </p>
@@ -61,21 +59,17 @@ Nichée dans un environnement bucolique, cette maison donne la sensation d’êt
         </div>
       </section>
       <section id="video-interieur" class="video-section">
-        <h2>Vidéo Intérieur</h2>
-        <iframe src="https://www.youtube.com/embed/Y4OWu2-Oe0c"></iframe>
-      </section>
-      <section id="video-exterieur" class="video-section">
-        <h2>Vidéo Extérieur</h2>
-        <iframe src="https://www.youtube.com/embed/1x1pNOvK4s8"></iframe>
+        <h2>Vidéo Intérieur/Extérieur/</h2>
+        <iframe src="https://www.youtube.com/embed/nmpAIOhpPZo"></iframe>
       </section>
       <section id="geolocalisation">  
         <h2>Géolocalisation</h2>
-        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1Mou3ZQbNyg8nXSKMiYmVuFRDAnBISWQ&usp=sharing"></iframe>
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=11UC6ojKlLv13zNXyGNsn0Mspi_k6VOc&usp=sharing"></iframe>
       </section>
       <section id="cadastre">
         <h2>Cadastre</h2>
 <div style="display: flex; justify-content: center; align-items: center;">
-  <img src="documents/cadasrte.png"alt="Cadastre" style="max-width: 60%; height: auto;" />
+  <img src="documents/cadastre.png"alt="Cadastre" style="max-width: 60%; height: auto;" />
 </div>
       </section>
       <section id="Vue aérienne">
@@ -87,21 +81,16 @@ Nichée dans un environnement bucolique, cette maison donne la sensation d’êt
     <section id="details-techniques">
     <h2>Détails Techniques</h2>
     <ul>
-        <li><strong>Année de construction :</strong> années 1960</li>
-        <li><strong>Année d’achat :</strong> 1960</li>
-        <li><strong>Matériaux de construction :</strong> Fondation béton banché / murs en parpaings</li>
-        <li><strong>Isolation :</strong>murs /aucune - Plafond / aucune</li>
-        <li><strong>Toiture:</strong> Charpente en fermettes et couvertures plaques fibro-ciment</li>
+        <li><strong>Année de construction :</strong> années 1968-72</li>
+        <li><strong>Année d’achat :</strong>2013</li>
+        <li><strong>Matériaux de construction :</strong> Béton banché / Plancher bas : Dalle béton donnant sur un sous-sol non chauffé</li>
+        <li><strong>Toiture:</strong>Plafond avec ou sans remplissage non isolé donnant sur un local chauffé</li>
         <li><strong>Assainissement :</strong> Tout à l'égout</li>
-        <li><strong>Huisseries :</strong> Bois simple vitrage / Baie aluminium sur la partie véranda</li>
-        <li><strong>Superficie habitable :</strong> 116 m2 + 12 m2 (véranda)</li>
-        <li><strong>Superficie sous-sol :</strong> Environ 75 m2</li>
-        <li><strong>Surface cadastrale :</strong> 875 m2 division parcellaire en cours </li>
-        <li><strong>Nombre de chambres :</strong> 4</li>
-        <li><strong>Servitudes :</strong> Servitude souterraine (eau de pluie) profitant à la maison</li>  
-        <li><strong>Mode de chauffage :</strong> Chaudière fuel à condensation par radiateurs</li>
-        <li><strong>Taxe foncière :</strong> donnée indisponible dûe à la division parcellaire</li>
-        <li><strong>Autres informations :</strong> Rénovations importantes à envisager pour un confort de vie</li>
+        <li><strong>Huisseries :</strong> Porte(s) bois avec 30-60% de vitrage simple / Fenêtres battantes bois double vitrage</li>
+        <li><strong>Superficie habitable :</strong> environ 72 m2</li> 
+        <li><strong>Mode de chauffage :</strong> Panneau rayonnant électrique avec programmateur pièce par pièce /PAC air/air</li>
+        <li><strong>Taxe foncière :</strong>787€</li>
+        <li><strong>Autres informations :</strong>Charges copropriété 1 017 €</li>
     </ul>
 </section>
    <section id="dpe">
@@ -113,21 +102,13 @@ Nichée dans un environnement bucolique, cette maison donne la sensation d’êt
       <section id="elements-supplementaires">
         <h2>Documents</h2>
         <div class="documents">
-          <a href="documents/9 diagnostics.pdf">
+          <a href="documents/DDT CGMA.pdf">
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
             DPE
           </a>
-          <a href="documents/11 audit.pdf">
-            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-            AUDIT
-          </a>
-           <a href="documents/croquis.pdf">
+           <a href="documents/Croquis.png">
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
             Croquis
-          </a>
-          <a href="documents/division parcellaire.pdf">
-            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-            Division Parcellaire
           </a>
           </a>
           </a>
