--- a/index1.html
+++ b/index1.html
@@ -17,7 +17,7 @@
         <h1>Bureaux à proximité de stationnement </h1>
         <p>Livron sur Drôme</p>
         <p>Cyrille BOUVET - 06 22 85 16 39 / Yaël BORJA - 07 51 62 09 13</p>
-        <p class="prix">105 000 €</p>
+        <p class="prix">99 200 € </p>
       </div>
     </header>
     <nav class="menu">
@@ -35,9 +35,8 @@
       <section id="a-propos">
         <h2>A propos</h2>
         <p>
-Découvrez ces bureaux idéalement situé à Livron-sur-Drôme, à deux pas du grand parking gratuit de la mairie.
-Ils bénéficient d’un double accès pratique, depuis la rue du Parc et l’avenue principale Joseph Combier.</p> 
-<p>Situé au sein d’une petite copropriété de 5 lots avec un espace vert accueillant, ce local offre un bel espace de travail lumineux d’environ 35 m² pouvant servir de coworking. Il dispose également de plusieurs pièces modulables, facilement aménageables selon la nature de votre activité.</p>
+ Découvrez ces bureaux idéalement situés à Livron-sur-Drôme, à deux pas du grand parking gratuit de la mairie. Ils bénéficient d’un double accès pratique, depuis la rue du Parc et l’avenue principale Joseph Combier. </p> 
+<p>Situés au sein d’une petite copropriété de 5 lots avec un espace vert accueillant, ces locaux offrent un bel espace de travail lumineux d’environ 35 m² pouvant servir de coworking. Ils disposent également de plusieurs pièces modulables, facilement aménageables selon la nature de votre activité.</p>
 <p>Un emplacement stratégique pour développer votre activité dans un environnement agréable et fonctionnel.
 </p>
 </p>
